fixing css alignment in feed content

--- a/frontend/src/components/ContentRec.css
+++ b/frontend/src/components/ContentRec.css
@@ -4,22 +4,23 @@
     border: 1px solid #FFFFFF;
     border-radius: 26px;
     margin-bottom: 40px;
+    padding: 5px;
 }
 
 .title__RecContent {
     font-weight: 600;
     font-size: 100px;
     line-height: 102px;
-    display: flex;
-    align-items: center;
-    margin: 60px;
+    /* display: flex;
+    align-items: center; */
+    margin: 3%;
 }
 
 .subtitle__RecContent {
     font-weight: 400;
     font-size: 15px;
     line-height: 27px;
-    margin-bottom: 0;
-    margin-top: auto;
-    margin: 60px;
+    margin-bottom: 4%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
