--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -16,6 +16,10 @@
 
 }
 
+.navbar {
+    background-color: transparent;
+}
+
 .nav-list {
     font-family: 'Epilogue';
     font-style: normal;
